# ZZZ-Computer-Science-Course

./: BOZHOK NAM_9  CMakeLists.txt  NotEmpty.txt  README.md  answers.txt  anti-flood2.txt  deadlines.yml  file1.txt  file3.txt  my_blog.txt  numbers.txt
.github/workflows/: ci.yml
docs/: ci.md  readme.md  setup.md  style.md
tasks/: BOZHOK Integers  CMakeLists.txt  readme.md
tasks/bitsets/: readme.md  variants.md
tasks/bitsets/tasks/1/: CMakeLists.txt  solution.h
tasks/bitsets/tasks/10/: CMakeLists.txt
tasks/bitsets/tasks/11/: CMakeLists.txt
tasks/bitsets/tasks/12/: CMakeLists.txt  solution.h
tasks/finite_state_machine/: readme.md  variants.md
tasks/finite_state_machine/18/: solution.c
tasks/finite_state_machine/tasks/: test_regex.cpp
tasks/geometry/: readme.md  variants.md
tasks/hack/: readme.md  variants.md
tasks/integers/: readme.md  variants.md
tasks/integers/tasks/: test.cpp
tasks/latex/: readme.md  variants.md
tasks/linerization/: readme.md  variants.md
tasks/linux/: readme.md  variants.md
tasks/matrix/: readme.md  variants.md
tasks/nam/: readme.md  variants.md
tasks/numerical_methods/: readme.md  variants.md
tasks/numerical_methods/20/: solution.c
tasks/referat/: readme.md
tasks/reverse/: readme.md  variants.md
tasks/taylor/: readme.md  variants.md
tasks/turing_diagrams/: readme.md  variants.md
tasks/turing_machine/: readme.md  variants.md
tools/: config.yaml  generator.py  run_linter.sh  students.txt
tools/data/: 13.txt  l05-2011.txt  l15-2011.txt
tools/templates/: fsm.cpp  reg.h  taylor.h  test_solution.cpp
(+325 files in other folders)
